# pocket-fmdsp

./: .gitignore  CMakeLists.txt  DESIGN.md  FLASHING.md  README.md
firmware/: CMakeLists.txt  README.md
firmware/app/: blinky.c  main.c  main_hw.c
firmware/bsp/: board.h
firmware/bsp/primer2/: board_primer2.c  primer2_pins.h  sd_spi.c
firmware/bsp/sim/: board_sim.c  semihosting.c  semihosting.h
firmware/cmake/: arm-none-eabi.cmake
firmware/fatfs/: diskio.c  ffconf.h
firmware/freertos/: FreeRTOSConfig.h
firmware/gui/: font_sjis.h  gfx.c  gfx.h  ui.c  ui.h  ui_strings.h
firmware/ld/: qemu_netduino2.ld  stm32f103ve.ld
firmware/startup/: startup.c
firmware/tools/: flash_rlink.sh  gen_drumpcm.py  gen_songs.py  gen_tracklist.py  gen_ui_strings.py  genfont.py  genfont_sjis.py  run_qemu_sim.sh
host/: pfm_host.c  pfm_info.c  wav.c  wav.h
include/pfm/: opna.h  opna_drum.h  opna_fm.h  opna_ssg.h  opna_timer.h  pfm_config.h  pfm_prof.h  player.h  pmd.h
scripts/: check-m3.sh  validate-arm-audio.sh
src/driver/: player.c  pmd_load.c
src/opna/: opna.c  opna_drum.c  opna_drum_pcm.h  opna_fm.c  opna_ssg.c  opna_tables.h  opna_timer.c
